@@ -212,11 +212,12 @@ filename=`testrun ${abs_top_builddir}/debuginfod/debuginfod-find -v debuginfo $B
 cmp $filename F/prog2
 cat vlog
 grep -q Progress vlog
+grep -q Downloaded.from vlog
 tempfiles vlog
 filename=`testrun env DEBUGINFOD_PROGRESS=1 ${abs_top_builddir}/debuginfod/debuginfod-find executable $BUILDID2 2>vlog2`
 cmp $filename F/prog2
 cat vlog2
-grep -q Downloading vlog2
+grep -q 'Downloading.*http' vlog2
 tempfiles vlog2
 filename=`testrun ${abs_top_builddir}/debuginfod/debuginfod-find source $BUILDID2 ${PWD}/prog2.c`
 cmp $filename ${PWD}/prog2.c
