@@ -1,5 +1,11 @@
 2020-03-22  Frank Ch. Eigler  <fche@redhat.com>
 
+	* debuginfod_get_url.3: New function, documented ...
+	* debuginfod_find_debuginfo.3: ... here.
+	* Makefile.am (notrans_dist_*_man3): Add it.
+
+2020-03-22  Frank Ch. Eigler  <fche@redhat.com>
+
 	* debuginfod_get_user.3, _set_user.3: New functions, documented ...
 	* debuginfod_find_debuginfo.3: ... here.
 	* Makefile.am (notrans_dist_*_man3): List all debuginfod .3 functions.
